# mkdocs-opensafely-backend-contracts

./: .gitignore  .pre-commit-config.yaml  DEVELOPERS.md  README.md  contracts.py  justfile  pyproject.toml  requirements.dev.in  requirements.dev.txt  requirements.prod.in  requirements.prod.txt
.github/workflows/: main.yml
plugin/: backends.py  contracts.py  exceptions.py  main.py  specs.py
tests/: data.json  data_with_additional_text.json  data_with_codelist.json  data_with_multiline_series.json  test_contracts.py
tests/plugin/: test_main.py
