[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mkdocs-opensafely-databuilder"
description = ""
version = "1+local"
readme = "README.md"
authors = [{name = "OpenSAFELY", email = "tech@opensafely.org"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
requires-python = ">=3.9"
dependencies = [
  "first",
]

[project.entry-points."mkdocs.plugins"]
"mkdocs-opensafely-databuilder" = "plugin.main:DataBuilderPlugin"

[project.urls]
Home = "https://opensafely.org"
Documentation = "https://docs.opensafely.org"
Source = "https://github.com/opensafely-core/mkdocs-opensafely-databuilder"

[tool.black]
exclude = '''
(
  /(
      \.git         # exclude a few common directories
    | \.direnv
    | \.venv
    | venv
  )/
)
'''

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100
skip_covered = true

[tool.coverage.html]

[tool.isort]
profile = "black"
lines_after_imports = 2
skip_glob = [".direnv", "venv", ".venv"]

[tool.flit.module]
name = "plugin"

[tool.pytest.ini_options]
addopts = "--tb=native --strict-markers"
testpaths = ["tests"]
